--- a/W3RESOURCE Exercises/Functional Programming/Lambda.ipynb
+++ b/W3RESOURCE Exercises/Functional Programming/Lambda.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Write a Python program to access only unique key value of a Python object"
+    "## Write a Python program to remove None values from a given list using the lambda function."
    ]
   },
   {
@@ -13,37 +13,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json"
+    "def remove_none(l: list):\n",
+    "    result = filter(lambda x: x is not None, l)\n",
+    "    return list(result)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def unique_keys(s: str):\n",
-    "    return json.loads(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'a': 4, 'b': 2}"
+       "[12, 0, 23, -55, 234, 89, 0, 6, -12]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unique_keys('{\"a\":  1, \"a\":  2, \"a\":  3, \"a\": 4, \"b\": 1, \"b\": 2}')"
+    "remove_none([12, 0, None, 23, None, -55, 234, 89, None, 0, 6, -12])"
    ]
   }
  ],
