--- a/W3RESOURCE Exercises/Functional Programming/Map.ipynb
+++ b/W3RESOURCE Exercises/Functional Programming/Map.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Write a Python program to get unique enumeration values."
+    "## Write a Python program to convert a given list of tuples to a list of strings using the map function."
    ]
   },
   {
@@ -13,27 +13,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from enum import Enum"
+    "def convert(l: list[tuple]):\n",
+    "    result = map(' '.join, l)\n",
+    "    return list(result)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['red pink', 'white black', 'orange green']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def unique_enums():\n",
-    "    class Countries(Enum):\n",
-    "        Afghanistan = 93\n",
-    "        Albania = 355\n",
-    "        Algeria = 213\n",
-    "        Andorra = 376\n",
-    "        Angola = 244\n",
-    "        India = 355\n",
-    "        USA = 213\n",
-    "        \n",
-    "    for country in Countries:\n",
-    "        print(f'{country.name} = {country.value}')"
+    "convert([('red', 'pink'), ('white', 'black'), ('orange', 'green')])"
    ]
   },
   {
@@ -42,19 +44,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Afghanistan = 93\n",
-      "Albania = 355\n",
-      "Algeria = 213\n",
-      "Andorra = 376\n",
-      "Angola = 244\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['Sheridan Gentry', 'Laila Mckee', 'Ahsan Rivas', 'Conna Gonzalez']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "unique_enums()"
+    "convert([('Sheridan', 'Gentry'), ('Laila', 'Mckee'), ('Ahsan', 'Rivas'), ('Conna', 'Gonzalez')])"
    ]
   }
  ],
