--- a/GFG Exercises/Conditional Statement/Exercises/Increasing Power.ipynb
+++ b/GFG Exercises/Conditional Statement/Exercises/Increasing Power.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Given a positive integer x, the task is to print the numbers from 1 to x in the order as 1^2, 2^2, 3^2, 4^2, 5^2, ... (in increasing order)."
+    "### Given a positive integer x, the task is to print the numbers from 1 to x in the order as 1^2, 2^2, 3^2, 4^2, 5^2, ... (in increasing order)."
    ]
   },
   {
