--- a/GFG Exercises/Conditional Statement/Exercises/String Jumper.ipynb
+++ b/GFG Exercises/Conditional Statement/Exercises/String Jumper.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  You are given a string str, you need to print its characters at even indices(index starts at 0)."
+    "### You are given a string str, you need to print its characters at even indices(index starts at 0)."
    ]
   },
   {
