--- a/GFG Exercises/Conditional Statement/Exercises/Zero Converter.ipynb
+++ b/GFG Exercises/Conditional Statement/Exercises/Zero Converter.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## You are given a number n. The number n can be negative or positive. \n",
+    "### You are given a number n. The number n can be negative or positive. \n",
     "If n is negative, print numbers from n to 0 by adding 1 to n in the neg function. <br>\n",
     "If positive, print numbers from n-1 to 0 by subtracting 1 from n in the pos function."
    ]
