--- a/GFG Exercises/Conditional Statement/Programs/Even or Odd.ipynb
+++ b/GFG Exercises/Conditional Statement/Programs/Even or Odd.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Program to Check if a Number is Odd or Even"
+    "### Program to Check if a Number is Odd or Even"
    ]
   },
   {
