--- a/GFG Exercises/Conditional Statement/Programs/Natural Numbers.ipynb
+++ b/GFG Exercises/Conditional Statement/Programs/Natural Numbers.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Given a natural number n, the task is to write a Python program to first find the sum of first n natural numbers and then print each step as a pattern."
+    "### Given a natural number n, the task is to write a Python program to first find the sum of first n natural numbers and then print each step as a pattern."
    ]
   },
   {
