--- a/GFG Exercises/Conditional Statement/Programs/Patterns.ipynb
+++ b/GFG Exercises/Conditional Statement/Programs/Patterns.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Full Pyramids"
+    "### Full Pyramids"
    ]
   },
   {
@@ -261,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Half Pyramids"
+    "### Half Pyramids"
    ]
   },
   {
