--- a/GFG Exercises/List/Exercises/Intersection of Arrays.ipynb
+++ b/GFG Exercises/List/Exercises/Intersection of Arrays.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Given two sorted arrays arr1[] and arr2[]. Your task is to return the intersection of both arrays.\n",
+    "### Given two sorted arrays arr1[] and arr2[]. Your task is to return the intersection of both arrays.\n",
     "\n",
     "Note: If there is no intersection then return an empty array."
    ]
