--- a/GFG Exercises/List/Exercises/Min and Max.ipynb
+++ b/GFG Exercises/List/Exercises/Min and Max.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Given an array arr. Your task is to find the minimum and maximum elements in the array.\n",
+    "### Given an array arr. Your task is to find the minimum and maximum elements in the array.\n",
     "\n",
     "Note: Return a Pair that contains two elements the first one will be a minimum element and the second will be a maximum."
    ]
