--- a/GFG Exercises/List/Programs/Swap Elements.ipynb
+++ b/GFG Exercises/List/Programs/Swap Elements.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Program to Swap Two Elements in a List"
+    "### Program to Swap Two Elements in a List"
    ]
   },
   {
