--- a/GFG Exercises/String/Exercises/Anagram.ipynb
+++ b/GFG Exercises/String/Exercises/Anagram.ipynb
@@ -4,16 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Trouble with Angry Friends"
+    "# Anagram"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### There are two friends, John and Smith, and the parameters j_angry and s_angry to indicate if each is angry. You are in trouble if both of them are angry or no one of them is angry.\n",
+    "### Given two strings s1 and s2 consisting of lowercase characters. The task is to check whether two given strings are an anagram of each other or not.\n",
     "\n",
-    "Now, complete the function which returns true if you are in trouble, else return false"
+    "An anagram of a string is another string that contains the same characters, only the order of characters can be different. For example, \"act\" and \"tac\" are an anagram of each other. \n",
+    "\n",
+    "Note : Strings s1 and s2 can only contain lowercase alphabets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def areAnagrams(s1: str, s2: str):\n",
+    "    return Counter(s1) == Counter(s2)"
    ]
   },
   {
@@ -22,18 +43,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def friends_in_trouble(j_angry: bool, s_angry: bool):\n",
-    "    if j_angry and s_angry:\n",
-    "        return True\n",
-    "    elif not j_angry and not s_angry:\n",
-    "        return True\n",
-    "    \n",
-    "    return False"
+    "def areAnagrams(s1: str, s2: str):\n",
+    "    return sorted(s1) == sorted(s2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -42,18 +58,18 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "friends_in_trouble(True, True)"
+    "areAnagrams(\"geeks\",\"kseeg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -62,18 +78,18 @@
        "False"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "friends_in_trouble(False, True)"
+    "areAnagrams(\"allergy\",\"allergic\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -82,33 +98,13 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "friends_in_trouble(False, False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "friends_in_trouble(True, False)"
+    "areAnagrams(\"g\",\"g\")"
    ]
   }
  ],
