--- a/GFG Exercises/String/Exercises/Palindrome String.ipynb
+++ b/GFG Exercises/String/Exercises/Palindrome String.ipynb
@@ -4,25 +4,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Interchange First and Last"
+    "# Palindrome String"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Given a list, write a Python program to swap the first and last element of the list"
+    "### You are given a string s. Your task is to determine if the string is a palindrome. A string is considered a palindrome if it reads the same forwards and backwards."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isPalindrome(s: str):\n",
+    "    reverse_s = list(s)\n",
+    "    reverse_s.reverse()\n",
+    "    return s == ''.join(reverse_s)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def interchange(l: list):\n",
-    "    l[0], l[-1] = l[-1], l[0]\n",
-    "    return l"
+    "isPalindrome(\"abba\")"
    ]
   },
   {
@@ -33,7 +54,7 @@
     {
      "data": {
       "text/plain": [
-       "[5, 2, 3, 4, 1]"
+       "False"
       ]
      },
      "execution_count": 3,
@@ -42,7 +63,7 @@
     }
    ],
    "source": [
-    "interchange([1, 2, 3, 4, 5])"
+    "isPalindrome(\"abc\")"
    ]
   },
   {
@@ -53,7 +74,7 @@
     {
      "data": {
       "text/plain": [
-       "[24, 35, 9, 56, 12]"
+       "True"
       ]
      },
      "execution_count": 4,
@@ -62,21 +83,46 @@
     }
    ],
    "source": [
-    "interchange([12, 35, 9, 56, 24])"
+    "isPalindrome(\"a\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isPalindrome(\"acbca\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def interchange(l: list):\n",
-    "    temp = l[0]\n",
-    "    l[0] = l[-1]\n",
-    "    l[-1] = temp\n",
-    "    \n",
-    "    return l"
+    "def isPalindrome(s: str):\n",
+    "        start = 0\n",
+    "        end = len(s) - 1\n",
+    "        \n",
+    "        for i in range(len(s) // 2):\n",
+    "            if s[start] != s[end]:\n",
+    "                return False\n",
+    "            start += 1\n",
+    "            end -= 1\n",
+    "        else:\n",
+    "            return True"
    ]
   },
   {
@@ -87,7 +133,7 @@
     {
      "data": {
       "text/plain": [
-       "[5, 2, 3, 4, 1]"
+       "True"
       ]
      },
      "execution_count": 7,
@@ -96,40 +142,27 @@
     }
    ],
    "source": [
-    "interchange([1, 2, 3, 4, 5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[24, 35, 9, 56, 12]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "interchange([12, 35, 9, 56, 24])"
+    "isPalindrome(\"abba\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def interchange(l: list):\n",
-    "    tup = (l[0], l[-1])\n",
-    "    (l[-1], l[0]) = tup\n",
-    "    \n",
-    "    return l"
+    "isPalindrome(\"abc\")"
    ]
   },
   {
@@ -140,7 +173,7 @@
     {
      "data": {
       "text/plain": [
-       "[5, 2, 3, 4, 1]"
+       "True"
       ]
      },
      "execution_count": 9,
@@ -149,7 +182,7 @@
     }
    ],
    "source": [
-    "interchange([1, 2, 3, 4, 5])"
+    "isPalindrome(\"a\")"
    ]
   },
   {
@@ -160,7 +193,7 @@
     {
      "data": {
       "text/plain": [
-       "[24, 35, 9, 56, 12]"
+       "True"
       ]
      },
      "execution_count": 10,
@@ -169,72 +202,41 @@
     }
    ],
    "source": [
-    "interchange([12, 35, 9, 56, 24])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def interchange(l: list):\n",
-    "    start, *middle, end = l\n",
-    "    l = [end, *middle, start]\n",
-    "    \n",
-    "    return l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[5, 2, 3, 4, 1]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "interchange([1, 2, 3, 4, 5])"
+    "isPalindrome(\"acbca\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[24, 35, 9, 56, 12]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "interchange([12, 35, 9, 56, 24])"
+    "def isPalindrome(s: str):\n",
+    "        for i in range(len(s) // 2):\n",
+    "            if s[i] != s[len(s) - i - 1]:\n",
+    "                return False\n",
+    "        else:\n",
+    "            return True"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def interchange(l: list):\n",
-    "    l = l[-1:] + l[1:-1] + l[:1]\n",
-    "    \n",
-    "    return l"
+    "isPalindrome(\"abba\")"
    ]
   },
   {
@@ -245,7 +247,7 @@
     {
      "data": {
       "text/plain": [
-       "[5, 2, 3, 4, 1]"
+       "False"
       ]
      },
      "execution_count": 15,
@@ -254,7 +256,7 @@
     }
    ],
    "source": [
-    "interchange([1, 2, 3, 4, 5])"
+    "isPalindrome(\"abc\")"
    ]
   },
   {
@@ -265,7 +267,7 @@
     {
      "data": {
       "text/plain": [
-       "[24, 35, 9, 56, 12]"
+       "True"
       ]
      },
      "execution_count": 16,
@@ -274,7 +276,27 @@
     }
    ],
    "source": [
-    "interchange([12, 35, 9, 56, 24])"
+    "isPalindrome(\"a\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isPalindrome(\"acbca\")"
    ]
   }
  ],
