--- a/GFG Exercises/String/Exercises/Remove Duplicates.ipynb
+++ b/GFG Exercises/String/Exercises/Remove Duplicates.ipynb
@@ -4,66 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Union of Arrays"
+    "# Remove Duplicates"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Given two arrays a[] and b[], the task is to find the number of elements in the union between these two arrays.\n",
-    "\n",
-    "Note: Elements of a[] and b[] are not necessarily distinct."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def findUnion(a: list, b: list):\n",
-    "        return len(set(a + b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "findUnion([1, 2, 3, 4, 5], [1, 2, 3])"
+    "### Given a string s which may contain lowercase and uppercase characters. The task is to remove all duplicate characters from the string and find the resultant string. The order of remaining characters in the output should be same as in the original string."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "findUnion([85, 25, 1, 32, 54, 6], [85, 2])"
+    "def removeDuplicates(s: str):\n",
+    "    unique = set(s)\n",
+    "    result = \"\"\n",
+    "    \n",
+    "    for char in s:\n",
+    "        if char in unique:\n",
+    "            result += char\n",
+    "            unique.remove(char)\n",
+    "            \n",
+    "    return result"
    ]
   },
   {
@@ -74,7 +40,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "'geEksforG'"
       ]
      },
      "execution_count": 4,
@@ -83,7 +49,27 @@
     }
    ],
    "source": [
-    "findUnion([1, 2, 1, 1, 2], [2, 2, 1, 2, 1] )"
+    "removeDuplicates(\"geEksforGEeks\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HaPpyNewYr'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "removeDuplicates(\"HaPpyNewYear\")"
    ]
   }
  ],
