--- a/GFG Exercises/String/Exercises/Slicing in String.ipynb
+++ b/GFG Exercises/String/Exercises/Slicing in String.ipynb
@@ -4,66 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Union of Arrays"
+    "# Slicing in String"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Given two arrays a[] and b[], the task is to find the number of elements in the union between these two arrays.\n",
-    "\n",
-    "Note: Elements of a[] and b[] are not necessarily distinct."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def findUnion(a: list, b: list):\n",
-    "        return len(set(a + b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "findUnion([1, 2, 3, 4, 5], [1, 2, 3])"
+    "### Given a string of braces named bound_by, and a string named tag_name. The task is to print a new string such that tag_name is in the middle of bound_by."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "findUnion([85, 25, 1, 32, 54, 6], [85, 2])"
+    "def join_middle(bound_by: str, tag_name: str):\n",
+    "  return bound_by[0 : len(bound_by) // 2] + tag_name + bound_by[len(bound_by) // 2 : ]"
    ]
   },
   {
@@ -74,7 +32,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "'[[tag]]'"
       ]
      },
      "execution_count": 4,
@@ -83,7 +41,27 @@
     }
    ],
    "source": [
-    "findUnion([1, 2, 1, 1, 2], [2, 2, 1, 2, 1] )"
+    "join_middle('[[]]', 'tag')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<body>'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "join_middle('<>', 'body')"
    ]
   }
  ],
