--- a/GFG Exercises/String/Exercises/String Methods - I.ipynb
+++ b/GFG Exercises/String/Exercises/String Methods - I.ipynb
@@ -4,14 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Print Decreasing"
+    "# String Methods - I"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Given a number x, the task is to print the numbers from x to 0 in decreasing order in a single line."
+    "### In this question, we'll take a look at inbuilt string methods like title(), swapcase(), find(), strip().\n",
+    "You'll be given a string str and x, you'll perform various operations on them."
    ]
   },
   {
@@ -20,11 +21,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def printInDecreasing(x: int):\n",
-    "    \n",
-    "    while(x >= 0):\n",
-    "        print(x, end=\" \")\n",
-    "        x -= 1"
+    "def trim(str: str):\n",
+    "    return str.strip()   \n",
+    "\n",
+    "def exists(str: str, x: str):\n",
+    "    return str.find(x)      \n",
+    "\n",
+    "def titleIt(str: str):\n",
+    "    return str.title()      \n",
+    "\n",
+    "def casesSwap(str: str):\n",
+    "    return str.swapcase()  "
    ]
   },
   {
@@ -36,46 +43,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 2 1 0 "
+      "hello\n",
+      "2\n",
+      "Hello\n",
+      "HELLO\n"
      ]
     }
    ],
    "source": [
-    "printInDecreasing(3)"
+    "print(trim('hello'))\n",
+    "print(exists('hello','llo'))\n",
+    "print(titleIt('hello'))\n",
+    "print(casesSwap('hello'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 9 8 7 6 5 4 3 2 1 0 "
+      "python is a language\n",
+      "-1\n",
+      "Python Is A Language\n",
+      "python is a language\n"
      ]
     }
    ],
    "source": [
-    "printInDecreasing(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "45 44 43 42 41 40 39 38 37 36 35 34 33 32 31 30 29 28 27 26 25 24 23 22 21 20 19 18 17 16 15 14 13 12 11 10 9 8 7 6 5 4 3 2 1 0 "
-     ]
-    }
-   ],
-   "source": [
-    "printInDecreasing(45)"
+    "print(trim('      python is a language          '))\n",
+    "print(exists('python is a language',' an '))\n",
+    "print(titleIt('python is a language'))\n",
+    "print(casesSwap('PYTHON IS A LANGUAGE'))"
    ]
   }
  ],
