--- a/GFG Exercises/String/Programs/Reverse Words.ipynb
+++ b/GFG Exercises/String/Programs/Reverse Words.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Length of List"
+    "# Reverse Words"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Program to Find the Length of a List"
+    "### Program to Reverse Words in a Given String"
    ]
   },
   {
@@ -20,28 +20,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def length(l: list):\n",
-    "    return len(l)"
+    "def reverse_words(s: str):\n",
+    "    return ' '.join(s.split()[::-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8"
+       "'Geeks for Geeks'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "length([1, 2, 3, 4, 5, 6, 7, 8])"
+    "reverse_words(\"Geeks for Geeks\")"
    ]
   },
   {
@@ -52,7 +52,7 @@
     {
      "data": {
       "text/plain": [
-       "5"
+       "'sentence this reverse'"
       ]
      },
      "execution_count": 3,
@@ -61,7 +61,7 @@
     }
    ],
    "source": [
-    "length([12, 35, 9, 56, 24])"
+    "reverse_words(\"reverse this sentence\")"
    ]
   },
   {
@@ -70,13 +70,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def length(l: list):\n",
-    "    cnt = 0\n",
+    "def reverse_words(s: str):\n",
+    "    words = s.split()\n",
+    "    reversed_words = \"\"\n",
     "    \n",
-    "    for i in l:\n",
-    "        cnt += 1\n",
+    "    for word in reversed(words):\n",
+    "        reversed_words += word + \" \"\n",
     "        \n",
-    "    return cnt"
+    "    return reversed_words.strip()"
    ]
   },
   {
@@ -87,7 +88,7 @@
     {
      "data": {
       "text/plain": [
-       "8"
+       "'Geeks for Geeks'"
       ]
      },
      "execution_count": 6,
@@ -96,7 +97,7 @@
     }
    ],
    "source": [
-    "length([1, 2, 3, 4, 5, 6, 7, 8])"
+    "reverse_words(\"Geeks for Geeks\")"
    ]
   },
   {
@@ -107,7 +108,7 @@
     {
      "data": {
       "text/plain": [
-       "5"
+       "'sentence this reverse'"
       ]
      },
      "execution_count": 7,
@@ -116,7 +117,7 @@
     }
    ],
    "source": [
-    "length([12, 35, 9, 56, 24])"
+    "reverse_words(\"reverse this sentence\")"
    ]
   },
   {
@@ -125,37 +126,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from operator import length_hint"
+    "def reverse_words(s: str):\n",
+    "    words = s.split()\n",
+    "    reversed_words = \"\"\n",
+    "    \n",
+    "    while words:\n",
+    "        reversed_words += words.pop() + \" \"\n",
+    "        \n",
+    "    return reversed_words.strip()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def length(l: list):\n",
-    "    return length_hint(l)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8"
+       "'Geeks for Geeks'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "length([1, 2, 3, 4, 5, 6, 7, 8])"
+    "reverse_words(\"Geeks for Geeks\")"
    ]
   },
   {
@@ -166,7 +164,7 @@
     {
      "data": {
       "text/plain": [
-       "5"
+       "'sentence this reverse'"
       ]
      },
      "execution_count": 10,
@@ -175,7 +173,60 @@
     }
    ],
    "source": [
-    "length([12, 35, 9, 56, 24])"
+    "reverse_words(\"reverse this sentence\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverse_words(words: list[str]):\n",
+    "    if not words:\n",
+    "        return \"\"\n",
+    "    \n",
+    "    return (words[-1] + \" \" + reverse_words(words[:-1])).strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Geeks for Geeks'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reverse_words(\"Geeks for Geeks\".split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sentence this reverse'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reverse_words(\"reverse this sentence\".split())"
    ]
   }
  ],
