--- a/GFG Exercises/Conditional Statement/Exercises/Cat and Hat.ipynb
+++ b/GFG Exercises/Conditional Statement/Exercises/Cat and Hat.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## You are given a string str, you need to return True if  the words \"cat\" and \"hat\" appear same number of times in str, otherwise return False.\n",
+    "### You are given a string str, you need to return True if  the words \"cat\" and \"hat\" appear same number of times in str, otherwise return False.\n",
     "\n",
     "Note: str contains only lowercase English alphabets."
    ]
