--- a/GFG Exercises/Conditional Statement/Exercises/Multiplication Table.ipynb
+++ b/GFG Exercises/Conditional Statement/Exercises/Multiplication Table.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## You are given a number N, you need to print its multiplication table."
+    "### You are given a number N, you need to print its multiplication table."
    ]
   },
   {
