--- a/GFG Exercises/Conditional Statement/Programs/Prime Number.ipynb
+++ b/GFG Exercises/Conditional Statement/Programs/Prime Number.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Given a positive integer N, the task is to write a Python program to check if the number is Prime or not."
+    "### Given a positive integer N, the task is to write a Python program to check if the number is Prime or not."
    ]
   },
   {
@@ -154,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def isprime(num: int, itr):\n",
+    "def isprime(num: int, itr: int):\n",
     "    if num > 1:\n",
     "        if itr == 1 or itr == 2:\n",
     "            return True\n",
@@ -255,7 +255,7 @@
     "        return False\n",
     "    \n",
     "    i = 2\n",
-    "    while(i * i < num):\n",
+    "    while(i * i <= num):\n",
     "        if num % i == 0:\n",
     "            return False\n",
     "        \n",
