--- a/GFG Exercises/List/Programs/Minimum of Numbers.ipynb
+++ b/GFG Exercises/List/Programs/Minimum of Numbers.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Find Minimum of two numbers"
+    "### Find Minimum of two numbers"
    ]
   },
   {
