--- a/GFG Exercises/String/Exercises/Convert to Lowercase.ipynb
+++ b/GFG Exercises/String/Exercises/Convert to Lowercase.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Print Decreasing"
+    "# Convert to Lowercase"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Given a number x, the task is to print the numbers from x to 0 in decreasing order in a single line."
+    "### Given a string s. The task is to convert characters of string to lowercase."
    ]
   },
   {
@@ -20,11 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def printInDecreasing(x: int):\n",
-    "    \n",
-    "    while(x >= 0):\n",
-    "        print(x, end=\" \")\n",
-    "        x -= 1"
+    "def toLower(s : str):\n",
+    "    return s.lower()"
    ]
   },
   {
@@ -33,15 +30,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 2 1 0 "
-     ]
+     "data": {
+      "text/plain": [
+       "'abcdde'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "printInDecreasing(3)"
+    "toLower(\"ABCddE\")"
    ]
   },
   {
@@ -50,32 +50,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10 9 8 7 6 5 4 3 2 1 0 "
-     ]
+     "data": {
+      "text/plain": [
+       "'lmnoppqq'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "printInDecreasing(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "45 44 43 42 41 40 39 38 37 36 35 34 33 32 31 30 29 28 27 26 25 24 23 22 21 20 19 18 17 16 15 14 13 12 11 10 9 8 7 6 5 4 3 2 1 0 "
-     ]
-    }
-   ],
-   "source": [
-    "printInDecreasing(45)"
+    "toLower(\"LMNOppQQ\")"
    ]
   }
  ],
