--- a/GFG Exercises/String/Exercises/Repeat the Strings.ipynb
+++ b/GFG Exercises/String/Exercises/Repeat the Strings.ipynb
@@ -4,14 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Print Decreasing"
+    "# Repeat the Strings"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Given a number x, the task is to print the numbers from x to 0 in decreasing order in a single line."
+    "### Given two strings a and b. The task is to make a new string where the string with longer length should be in between and the one with shorter length should be outside on front and end. \n",
+    "## New string should be like shorter+longer+shorter."
    ]
   },
   {
@@ -20,11 +21,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def printInDecreasing(x: int):\n",
+    "def combo_string(a: str, b: str):\n",
+    "    if len(a) < len(b):\n",
+    "        short = a\n",
+    "        longer = b\n",
+    "    else:\n",
+    "        short = b\n",
+    "        longer = a\n",
     "    \n",
-    "    while(x >= 0):\n",
-    "        print(x, end=\" \")\n",
-    "        x -= 1"
+    "    return short + longer + short"
    ]
   },
   {
@@ -33,15 +38,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 2 1 0 "
-     ]
+     "data": {
+      "text/plain": [
+       "'HiThereHi'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "printInDecreasing(3)"
+    "combo_string('Hi','There')"
    ]
   },
   {
@@ -50,32 +58,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10 9 8 7 6 5 4 3 2 1 0 "
-     ]
+     "data": {
+      "text/plain": [
+       "'longshortlong'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "printInDecreasing(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "45 44 43 42 41 40 39 38 37 36 35 34 33 32 31 30 29 28 27 26 25 24 23 22 21 20 19 18 17 16 15 14 13 12 11 10 9 8 7 6 5 4 3 2 1 0 "
-     ]
-    }
-   ],
-   "source": [
-    "printInDecreasing(45)"
+    "combo_string('short','long')"
    ]
   }
  ],
