--- a/GFG Exercises/String/Exercises/Reverse Words.ipynb
+++ b/GFG Exercises/String/Exercises/Reverse Words.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Trouble with Angry Friends"
+    "# Reverse Words"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### There are two friends, John and Smith, and the parameters j_angry and s_angry to indicate if each is angry. You are in trouble if both of them are angry or no one of them is angry.\n",
+    "### Given a string s, reverse the string without reversing its individual words. Words are separated by spaces.\n",
     "\n",
-    "Now, complete the function which returns true if you are in trouble, else return false"
+    "Note: The string may contain leading or trailing spaces, or multiple spaces between two words. The returned string should only have a single space separating the words, and no extra spaces should be included."
    ]
   },
   {
@@ -22,33 +22,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def friends_in_trouble(j_angry: bool, s_angry: bool):\n",
-    "    if j_angry and s_angry:\n",
-    "        return True\n",
-    "    elif not j_angry and not s_angry:\n",
-    "        return True\n",
-    "    \n",
-    "    return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "friends_in_trouble(True, True)"
+    "def reverseWords(s: str):\n",
+    "        s = s.strip()\n",
+    "        words = s.split()\n",
+    "        words.reverse()\n",
+    "        return ' '.join(words)"
    ]
   },
   {
@@ -59,7 +37,7 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "'much very program this like i'"
       ]
      },
      "execution_count": 3,
@@ -68,7 +46,7 @@
     }
    ],
    "source": [
-    "friends_in_trouble(False, True)"
+    "reverseWords(\" i like this program very much \")"
    ]
   },
   {
@@ -79,7 +57,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "'mno pqr'"
       ]
      },
      "execution_count": 4,
@@ -88,7 +66,7 @@
     }
    ],
    "source": [
-    "friends_in_trouble(False, False)"
+    "reverseWords(\" pqr mno \")"
    ]
   },
   {
@@ -99,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "'a'"
       ]
      },
      "execution_count": 5,
@@ -108,7 +86,7 @@
     }
    ],
    "source": [
-    "friends_in_trouble(True, False)"
+    "reverseWords(\" a \")"
    ]
   }
  ],
