--- a/GFG Exercises/String/Exercises/String Methods - II.ipynb
+++ b/GFG Exercises/String/Exercises/String Methods - II.ipynb
@@ -4,14 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Print Decreasing"
+    "# String Methods - II"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Given a number x, the task is to print the numbers from x to 0 in decreasing order in a single line."
+    "### Given a string S, the task is to determine whether the string starts and ends with the characters 'gfg' (case insensitive)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to complete this task, you need to utilize the string functions S.lower(), S.upper(), S.startswith('string2'), and S.endswith('string2'). By using these functions, you can check if the given string S meets the specified conditions of starting and ending with 'gfg'."
    ]
   },
   {
@@ -20,11 +27,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def printInDecreasing(x: int):\n",
-    "    \n",
-    "    while(x >= 0):\n",
-    "        print(x, end=\" \")\n",
-    "        x -= 1"
+    "def gfg(S: str):\n",
+    "    b = S.lower()\n",
+    "    if(b.startswith('gfg') and b.endswith('gfg')):  \n",
+    "        print(\"Yes\")\n",
+    "    else:\n",
+    "        print(\"No\")"
    ]
   },
   {
@@ -36,12 +44,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 2 1 0 "
+      "Yes\n"
      ]
     }
    ],
    "source": [
-    "printInDecreasing(3)"
+    "gfg(\"gFgabcdEGfG\")"
    ]
   },
   {
@@ -53,29 +61,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 9 8 7 6 5 4 3 2 1 0 "
+      "No\n"
      ]
     }
    ],
    "source": [
-    "printInDecreasing(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "45 44 43 42 41 40 39 38 37 36 35 34 33 32 31 30 29 28 27 26 25 24 23 22 21 20 19 18 17 16 15 14 13 12 11 10 9 8 7 6 5 4 3 2 1 0 "
-     ]
-    }
-   ],
-   "source": [
-    "printInDecreasing(45)"
+    "gfg(\"GgfhTnagfg\")"
    ]
   }
  ],
