--- a/GFG Exercises/String/Exercises/Welcome Aboard.ipynb
+++ b/GFG Exercises/String/Exercises/Welcome Aboard.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Print Decreasing"
+    "# Welcome Aboard"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Given a number x, the task is to print the numbers from x to 0 in decreasing order in a single line."
+    "### Given name of a person, the task is to welcome the person by printing the name with \"Welcome\". If name is \"John\", you should print \"Welcome John\"."
    ]
   },
   {
@@ -20,11 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def printInDecreasing(x: int):\n",
-    "    \n",
-    "    while(x >= 0):\n",
-    "        print(x, end=\" \")\n",
-    "        x -= 1"
+    "def welcomeAboard(name: str):\n",
+    "    print(\"Welcome\", name)"
    ]
   },
   {
@@ -36,12 +33,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 2 1 0 "
+      "Welcome John\n"
      ]
     }
    ],
    "source": [
-    "printInDecreasing(3)"
+    "welcomeAboard(\"John\")"
    ]
   },
   {
@@ -53,29 +50,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 9 8 7 6 5 4 3 2 1 0 "
+      "Welcome Python\n"
      ]
     }
    ],
    "source": [
-    "printInDecreasing(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "45 44 43 42 41 40 39 38 37 36 35 34 33 32 31 30 29 28 27 26 25 24 23 22 21 20 19 18 17 16 15 14 13 12 11 10 9 8 7 6 5 4 3 2 1 0 "
-     ]
-    }
-   ],
-   "source": [
-    "printInDecreasing(45)"
+    "welcomeAboard(\"Python\")"
    ]
   }
  ],
