--- a/GFG Exercises/String/Programs/Remove ith Character.ipynb
+++ b/GFG Exercises/String/Programs/Remove ith Character.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Length of List"
+    "# Remove ith Character"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Program to Find the Length of a List"
+    "### Program to Remove Letters From a String"
    ]
   },
   {
@@ -20,8 +20,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def length(l: list):\n",
-    "    return len(l)"
+    "def remove_letter(s:str, c:chr):\n",
+    "    return s.replace(c, \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'heo word'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_letter(\"hello world\",\"l\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_letter(s: str, c: chr):\n",
+    "    s1 = \"\"\n",
+    "    \n",
+    "    for char in s:\n",
+    "        if char != c:\n",
+    "            s1 += char\n",
+    "            \n",
+    "    return s1"
    ]
   },
   {
@@ -32,7 +68,7 @@
     {
      "data": {
       "text/plain": [
-       "8"
+       "'heo word'"
       ]
      },
      "execution_count": 4,
@@ -41,27 +77,7 @@
     }
    ],
    "source": [
-    "length([1, 2, 3, 4, 5, 6, 7, 8])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "length([12, 35, 9, 56, 24])"
+    "remove_letter(\"hello world\",\"l\")"
    ]
   },
   {
@@ -70,13 +86,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def length(l: list):\n",
-    "    cnt = 0\n",
-    "    \n",
-    "    for i in l:\n",
-    "        cnt += 1\n",
-    "        \n",
-    "    return cnt"
+    "def remove_letter(s: str, c: chr):\n",
+    "    return \"\".join([char for char in s if char != c])"
    ]
   },
   {
@@ -87,7 +98,7 @@
     {
      "data": {
       "text/plain": [
-       "8"
+       "'heo word'"
       ]
      },
      "execution_count": 6,
@@ -96,86 +107,92 @@
     }
    ],
    "source": [
-    "length([1, 2, 3, 4, 5, 6, 7, 8])"
+    "remove_letter(\"hello world\",\"l\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "length([12, 35, 9, 56, 24])"
+    "def remove_letter(s: str, c: chr):\n",
+    "    return \"\".join(list(filter(lambda x: x != c, s)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from operator import length_hint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def length(l: list):\n",
-    "    return length_hint(l)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8"
+       "'heo word'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "length([1, 2, 3, 4, 5, 6, 7, 8])"
+    "remove_letter(\"hello world\",\"l\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_letter(s: str, c: chr):\n",
+    "    idx = s.find(c)\n",
+    "    \n",
+    "    if idx != -1:\n",
+    "        return s[:idx] + s[idx + 1:]\n",
+    "    \n",
+    "    return s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "'hell world'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "length([12, 35, 9, 56, 24])"
+    "remove_letter(\"hello world\",\"o\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello world'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_letter(\"hello world\",\"x\")"
    ]
   }
  ],
