--- a/GFG Exercises/String/Programs/Symmetrical or Palindrome.ipynb
+++ b/GFG Exercises/String/Programs/Symmetrical or Palindrome.ipynb
@@ -4,78 +4,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Print Decreasing"
+    "# Symmetrical or Palindrome"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Given a number x, the task is to print the numbers from x to 0 in decreasing order in a single line."
+    "### Given a string. the task is to check if the string is symmetrical and palindrome or not. \n",
+    "\n",
+    "A string is said to be symmetrical if both the halves of the string are the same and <br> \n",
+    "A string is said to be a palindrome string if one half of the string is the reverse of the other half or if a string appears the same when read forward or backward."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def printInDecreasing(x: int):\n",
+    "def palindrome(s: str):\n",
+    "    return s == s[::-1]\n",
+    "\n",
+    "def symmetrical(s: str):\n",
+    "    mid = len(s) // 2\n",
     "    \n",
-    "    while(x >= 0):\n",
-    "        print(x, end=\" \")\n",
-    "        x -= 1"
+    "    if mid % 2 != 0:\n",
+    "        return s[:mid] == s[mid:]\n",
+    "    else:\n",
+    "        return s[:mid] == s[mid + 1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 2 1 0 "
+      "False\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "printInDecreasing(3)"
+    "print(palindrome(\"khokho\"))\n",
+    "print(symmetrical(\"khokho\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 9 8 7 6 5 4 3 2 1 0 "
+      "True\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "printInDecreasing(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "45 44 43 42 41 40 39 38 37 36 35 34 33 32 31 30 29 28 27 26 25 24 23 22 21 20 19 18 17 16 15 14 13 12 11 10 9 8 7 6 5 4 3 2 1 0 "
-     ]
-    }
-   ],
-   "source": [
-    "printInDecreasing(45)"
+    "print(palindrome(\"amaama\"))\n",
+    "print(symmetrical(\"amaama\"))"
    ]
   }
  ],
