--- a/GFG Exercises/Function/Exercises/Sorting Objects of User Defined Class.ipynb
+++ b/GFG Exercises/Function/Exercises/Sorting Objects of User Defined Class.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "class GFG:\n",
     "    \n",
-    "    def __init__(self, a, b):\n",
+    "    def __init__(self, a: int, b: int):\n",
     "        self.a = a\n",
     "        self.b = b\n",
     "        \n",
@@ -116,23 +116,23 @@
     "@total_ordering\n",
     "class GFG:\n",
     "    \n",
-    "    def __init__(self, a, b):\n",
+    "    def __init__(self, a: int, b:int):\n",
     "        self.a = a\n",
     "        self.b = b\n",
     "        \n",
-    "    def __lt__(self, obj):\n",
+    "    def __lt__(self, obj: any):\n",
     "        return self.b < obj.b\n",
     "\n",
-    "    def __gt__(self, obj):\n",
+    "    def __gt__(self, obj: any):\n",
     "        return self.b > obj.b\n",
     "    \n",
-    "    def __le__(self, obj):\n",
+    "    def __le__(self, obj: any):\n",
     "        return self.b <= obj.b\n",
     "\n",
-    "    def __ge__(self, obj):\n",
+    "    def __ge__(self, obj: any):\n",
     "        return self.b >= obj.b\n",
     "    \n",
-    "    def __eq__(self, obj):\n",
+    "    def __eq__(self, obj: any):\n",
     "        return self.b == obj.b\n",
     "\n",
     "    def __repr__(self):\n",
