Twenty Third Commit

--- a/GFG Exercises/Sorting/Programs/Quick Sort.ipynb
+++ b/GFG Exercises/Sorting/Programs/Quick Sort.ipynb
@@ -18,30 +18,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def partition(arr: list, low: int, high: int):\n",
     "    pivot = arr[low]\n",
-    "    st = low\n",
-    "    low = low + 1\n",
+    "    i, j = low, high\n",
     "    \n",
-    "    while low < high:\n",
-    "        while low < high and arr[low] < pivot:\n",
-    "            low += 1\n",
+    "    while i < j:\n",
+    "        while i <= high and arr[i] <= pivot:\n",
+    "            i += 1\n",
     "            \n",
-    "        while high > low and arr[high] > pivot:\n",
-    "            high -= 1\n",
+    "        while j >= low and arr[j] > pivot:\n",
+    "            j -= 1\n",
     "            \n",
-    "        if low < high:\n",
-    "            arr[low], arr[high] = arr[high], arr[low]\n",
-    "            low += 1\n",
-    "            high -= 1\n",
+    "        if i < j:\n",
+    "            arr[i], arr[j] = arr[j], arr[i]\n",
+    "            i += 1\n",
+    "            j -= 1\n",
     "        \n",
-    "    arr[st], arr[high] = arr[high], arr[st]\n",
+    "    arr[low], arr[j] = arr[j], arr[low]\n",
     "    \n",
-    "    return high\n",
+    "    return j\n",
     "    \n",
     "\n",
     "def quick_sort(arr: list, low: int, high: int):\n",
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,16 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-2, 1, 1, 10, 4, 7, 9]"
+       "[-2, 1, 1, 4, 7, 9, 10]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
