--- a/GFG Exercises/Sorting/Programs/Bubble Sort.ipynb
+++ b/GFG Exercises/Sorting/Programs/Bubble Sort.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -49,13 +49,45 @@
        "[2, 10, 12, 18, 18, 39, 72, 85]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bubble_sort([39, 12, 18, 85, 72, 10, 2, 18])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bubble_sort(arr: list, n: int):\n",
+    "    if n == 1:\n",
+    "        return arr\n",
+    "    \n",
+    "    swapped = False\n",
+    "    \n",
+    "    for i in range(n - 1):\n",
+    "        if arr[i] > arr[i + 1]:\n",
+    "            arr[i], arr[i + 1] = arr[i + 1], arr[i]\n",
+    "            swapped = True\n",
+    "            \n",
+    "    if not swapped:\n",
+    "        return arr\n",
+    "    \n",
+    "    bubble_sort(arr, n - 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bubble_sort([39, 12, 18, 85, 72, 10, 2, 18], 8)"
    ]
   }
  ],
