Twenty Seventh Commit

--- a/GFG Exercises/Sorting/Programs/Heap Sort.ipynb
+++ b/GFG Exercises/Sorting/Programs/Heap Sort.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def heapify(arr, n, i):\n",
+    "def heapify(arr: list, n: int, i: int):\n",
     "\tlargest = i \n",
     "\tl = 2 * i + 1 \n",
     "\tr = 2 * i + 2 \n",
