--- a/W3RESOURCE Exercises/Python Modules/Python Math.ipynb
+++ b/W3RESOURCE Exercises/Python Modules/Python Math.ipynb
@@ -1,35 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write a Python program to calculate the sum of all prime numbers in a given list of positive integers."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import namedtuple"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Write a Python program that defines a NamedTuple named \"Car\" with fields 'make', 'model', 'year', and 'engine' (a NamedTuple representing engine details). Create an instance of the \"Car\" NamedTuple and print its attributes."
+    "def sum_prime(l: list[int]):\n",
+    "    if len(l) > 0:\n",
+    "        return sum(list(filter(lambda x: (x > 1 and all(x % y != 0 for y in range(2, x))), l)))\n",
+    "    else:\n",
+    "        return 'Empty List'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def named_tuples():\n",
-    "    Car = namedtuple('Car', ['make','model','year','engine'])\n",
-    "    Engine = namedtuple('Engine', ['type','cylinders'])\n",
-    "    \n",
-    "    engine = Engine(type='four-stroke', cylinders=4)\n",
-    "    car = Car(make='Honda', model='City', year=2024, engine=engine)\n",
-    "    \n",
-    "    return car.make, car.model, car.year, car.engine.type, car.engine.cylinders"
+    "sum_prime([1, 3, 4, 7, 9])"
    ]
   },
   {
@@ -40,7 +48,7 @@
     {
      "data": {
       "text/plain": [
-       "('Honda', 'City', 2024, 'four-stroke', 4)"
+       "48"
       ]
      },
      "execution_count": 3,
@@ -49,7 +57,7 @@
     }
    ],
    "source": [
-    "named_tuples()"
+    "sum_prime([11, 37, 444])"
    ]
   }
  ],
