Twenty Ninth Commit

--- a/W3RESOURCE Exercises/Python Projects/Python Numbers.ipynb
+++ b/W3RESOURCE Exercises/Python Projects/Python Numbers.ipynb
@@ -27,7 +27,7 @@
     "    def sum(self, l: list):\n",
     "        return sum(l)\n",
     "    \n",
-    "    def length(slice, l: list):\n",
+    "    def length(self, l: list):\n",
     "        return len(l)\n",
     "    \n",
     "    def count(self, l: list, item: int):\n",
